--- a/src/sass/components/_slideshow-gallery.scss
+++ b/src/sass/components/_slideshow-gallery.scss
@@ -1,5 +1,11 @@
-#slideshow-gallery .navigation-buttons {
-  float: right;
-  margin: 6px 18px;
-  cursor: pointer;
+// ---------------------------------------------------------------------------
+// This file contains all styles related to the "Slideshow Gallery" component.
+// ---------------------------------------------------------------------------
+
+#slideshow-gallery {
+  .navigation-buttons {
+    float: right;
+    margin: 6px 18px;
+    cursor: pointer;
+  }
 }
