Refactored layout sass TODO: Still need to refactor header further.

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,8 +3,7 @@
 // ---------------------------------------------------------------------------
 
 footer {
-  margin: auto;
-  margin-bottom: 12px;
+  margin: auto auto 12px;
   font-size: 14px;  // Smaller text size by default
   text-align: center;
 }
