--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -4,11 +4,10 @@
 header {
   $breakpoint: 500px;
 
-  display: flex;
   position: fixed; // Make the navigation bar stay at the top of the page
+  display: flex;
   width: 100%;
   top: 0;
-  left: 0;
   padding: 0 $horizontal-padding;
   box-sizing: border-box;
   align-items: center;
@@ -28,7 +27,6 @@ header {
   img {
     display: block;
     height: 42px;
-    margin-right: 12px;
 
     @media screen and (max-width: $breakpoint) {
       display: inline-block;
@@ -47,9 +45,12 @@ header {
   }
 
   nav {
-    width: 100%;
+    flex-grow: 1;
+    margin-left: 16px;
 
     @media screen and (max-width: $breakpoint) {
+      margin-left: 0;
+
       &:not(.shown) {
         display: none;
       }
@@ -57,13 +58,13 @@ header {
   }
 
   ul {
-    margin: 0;
     padding: 0;
+    margin: 0;
     overflow: hidden;
     list-style-type: none;
 
     a {
-      position: relative;     // :after is limited to the link
+      position: relative; // :after is limited to the link
       float: left;
       padding: 14.5px;
       text-align: center;
@@ -72,7 +73,7 @@ header {
       @media screen and (max-width: $breakpoint) {
         display: block;
         width: 100%;
-        box-sizing: border-box;   // Keeps links centered
+        box-sizing: border-box; // Keeps links centered
       }
 
       &.right {
@@ -92,7 +93,7 @@ header {
         @include shutter-border-vertical(4px, 52px);
 
         @media screen and (max-width: $breakpoint-mobile) {
-          top: 46px;  // smaller top offset in order to accomodate the last link (contact me)
+          top: 46px; // smaller top offset in order to accomodate the last link (contact me)
         }
       }
 
