--- a/src/sass/layouts/_scroll-to-top.scss
+++ b/src/sass/layouts/_scroll-to-top.scss
@@ -3,10 +3,10 @@
 // ---------------------------------------------------------------------------
 
 #scroll-to-top {
+  position: fixed;
   display: none;
   flex-direction: column;
   align-items: center;
-  position: fixed;
   bottom: 32px;
   right: 2.5%;
   z-index: 3;
@@ -15,8 +15,8 @@
     width: 32px;
   }
 
-  span{
-	  font-size: 12px;
-	  color: $color-on-background
+  span {
+    font-size: 12px;
+    color: $color-on-background;
   }
 }
