Footer margins do not have to be auto

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------
 
 footer {
-  margin: auto auto 12px;
+  margin-bottom: 12px;
   font-size: 14px;  // Smaller text size by default
   text-align: center;
 }
