--- a/src/sass/components/_next-section-button.scss
+++ b/src/sass/components/_next-section-button.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------
 
 #next-section-button {
-  margin: auto auto 12px;   // margin-bottom: 12px
+  margin-bottom: 12px;
 
   img {
     height: 36px;
