--- a/src/sass/pages/about/_about-experience.scss
+++ b/src/sass/pages/about/_about-experience.scss
@@ -3,25 +3,39 @@
 // ---------------------------------------------------------------------------
 
 #about #experience {
-  #next-section-button {
-    // Margin-top cannot be auto, otherwise margins are split between container and next-section-button, and container is no longer centered
-    margin-top: 0;
-  }
+  $breakpoint: 750px;
 
   // Horizontal content
   &-content {
     display: flex;
+
+    @media screen and (max-width: $breakpoint) {
+      display: block;
+    }
   }
 
   #timeline {
     min-height: 450px;
     width: 264px;
+    flex-shrink: 0;
     padding: 0;
     margin: 0;
     margin-right: 12px;
-    flex-shrink: 0;
     list-style-type: none;
     border-left: 2px solid $color-on-background;
+
+    // When screen is smaller than breakpoint (750px), then timeline moves to the top
+    @media screen and (max-width: $breakpoint) {
+      @include horizontal-selector;
+      min-height: 0;
+      width: auto;
+      max-width: none;
+      border-left: 0;
+
+      li.active {
+        margin-left: 0;
+      }
+    }
 
     li {
       position: relative;
@@ -34,12 +48,16 @@
         position: absolute;
         height: 6px;
         width: 6px;
-        left: -18px;
         top: calc(50% - 4px);
+        left: -18px;
         background-color: $color-background-variant;
         border: 2px solid $color-on-background;
-        border-radius: 75px;
+        border-radius: 50%;
         transition: left 0.2s;
+
+        @media screen and (max-width: $breakpoint) {
+          display: none;
+        }
       }
 
       &.active {
@@ -49,31 +67,6 @@
         &:before {
           border-color: $color-accent;
           left: -30px;
-        }
-      }
-    }
-  }
-
-  // When screen is smaller than breakpoint (750px), then timeline moves to the top
-  @media screen and (max-width: 750px) {
-    &-content {
-      display: block;
-    }
-
-    #timeline {
-      @include horizontal-selector;
-      min-height: 0;
-      width: auto;
-      max-width: none;
-      border-left: 0;
-
-      li {
-        &:before {
-          display: none;
-        }
-
-        &.active {
-          margin-left: 0;
         }
       }
     }
