--- a/src/sass/pages/about/_about.scss
+++ b/src/sass/pages/about/_about.scss
@@ -4,12 +4,14 @@
 
 #about {
   section {
+    $offset: 56px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: $content-height;
-    padding-top: 56px;
-    margin-top: -56px;
+    padding-top: $offset;
+    margin-top: -$offset;
     background-clip: content-box;
   }
 
