Pixel fallback for rem

--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -13,7 +13,8 @@
 ) {
   margin: 0;
   font-family: $font-family;
-  font-size: $font-size;
+  font-size: $font-size;    // Fallback to pixels if rem is not supported
+  font-size: calculateRem($font-size);
   font-weight: $font-weight;
   line-height: $line-height;
   letter-spacing: $letter-spacing;
@@ -42,21 +43,21 @@
 
 // Headings
 h1 {
-  @include text($heading-font-family, 2.6rem, 400, 1.2, -0.25px, uppercase);
+  @include text($heading-font-family, 48px, 400, 1.2, -0.25px, uppercase);
   @include centered-heading(4px, 4rem, $color-on-background, 3%);
 }
 
 h2 {
-  @include text($heading-font-family, 2.2rem, 300, 1.2, -0.5px, uppercase);
+  @include text($heading-font-family, 40px, 300, 1.2, -0.5px, uppercase);
   @include centered-heading(2px, 3rem, $color-on-background-variant, 3%);
 }
 
 h3 {
-  @include text($heading-font-family, 1.6rem, 400, 1.2, 0);
+  @include text($heading-font-family, 28px, 400, 1.2, 0);
 }
 
 h4 {
-  @include text($heading-font-family, 1.4rem, 500, 1.2, 0);
+  @include text($heading-font-family, 24px, 500, 1.2, 0);
 }
 
 // Body
