--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -27,7 +27,7 @@
     text-align: center;
 
     #name {
-      @include text($heading-font-family, 4rem, 300, 1.2, -0.5px, none);
+      @include text($heading-font-family, 72px, 300, 1.2, -0.5px, none);
       color: $color-on-base;
     }
 
