--- a/src/sass/pages/about/_about-experience.scss
+++ b/src/sass/pages/about/_about-experience.scss
@@ -3,13 +3,17 @@
 // ---------------------------------------------------------------------------
 
 #about #experience {
-  $breakpoint: 750px;
+  @mixin breakpoint {
+    @media screen and (max-width: 750px){
+      @content;
+    }
+  }
 
   // Horizontal content
   &-content {
     display: flex;
 
-    @media screen and (max-width: $breakpoint) {
+   @include breakpoint {
       display: block;
     }
   }
@@ -25,7 +29,7 @@
     border-left: 2px solid $color-on-background;
 
     // When screen is smaller than breakpoint (750px), then timeline moves to the top
-    @media screen and (max-width: $breakpoint) {
+    @include breakpoint {
       @include horizontal-selector;
       min-height: 0;
       width: auto;
@@ -55,7 +59,7 @@
         border-radius: 50%;
         transition: left 0.2s;
 
-        @media screen and (max-width: $breakpoint) {
+        @include breakpoint {
           display: none;
         }
       }
