Animation mixin.Also changed words in keyframe to not animation to distinguish.

--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -21,6 +21,15 @@
   }
 }
 
+// Animation mixin
+@mixin animation($args) {
+  animation: $args;
+  -webkit-animation: $args;
+  -moz-animation: $args;
+  -ms-animation: $args;
+  -o-animation: $args;
+}
+
 // Horizontal selector of items
 @mixin horizontal-selector {
   padding: 0;
