--- a/src/sass/base/_transitions.scss
+++ b/src/sass/base/_transitions.scss
@@ -25,7 +25,7 @@
 
     &-active {
       @extend %page-transition;
-      transition: transform 0.4s ease-in-out;
+      @include transition(transform 0.4s ease-in-out);
       z-index: 2;
     }
   }
@@ -48,7 +48,7 @@
 @mixin fade-slide($translateX, $translateY) {
   &-enter-active,
   &-leave-active {
-    transition: all 0.2s;
+    @include transition(opacity 0.2s, transform 0.2s);
   }
 
   &-enter {
