--- a/src/sass/pages/about/_about-experience.scss
+++ b/src/sass/pages/about/_about-experience.scss
@@ -4,7 +4,7 @@
 
 #about #experience {
   @mixin breakpoint {
-    @media screen and (max-width: 750px){
+    @media screen and (max-width: 750px) {
       @content;
     }
   }
@@ -13,7 +13,7 @@
   &-content {
     display: flex;
 
-   @include breakpoint {
+    @include breakpoint {
       display: block;
     }
   }
@@ -45,7 +45,7 @@
       position: relative;
       margin: 12px 12px;
       cursor: pointer;
-      transition: margin-left 0.2s;
+      @include transition(margin-left 0.2s);
 
       &:before {
         content: "";
@@ -57,7 +57,7 @@
         background-color: $color-background-variant;
         border: 2px solid $color-on-background;
         border-radius: 50%;
-        transition: left 0.2s;
+        @include transition(left 0.2s);
 
         @include breakpoint {
           display: none;
