--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-flow: column;
 
+
     input {
       padding: 10px 6px;
       margin: 4px 0;
@@ -27,11 +28,8 @@
     }
 
     textarea {
-      padding: 10px 6px;
-      margin: 6px 0;
+      @extend input;
       resize: none;
-      font-family: inherit;
-      font-size: inherit;
     }
   }
 
