Basic CSS for abilities

--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -60,6 +60,10 @@ h4 {
   @include text($heading-font-family, 24px, 500, 1.2, 0);
 }
 
+h5{
+  @include text($heading-font-family, 18px, 400, 1.2, 0);
+}
+
 // Body
 html {
   @include text($body-font-family, 18px, 400, 1.5, 0.5px);
