--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 // Page-specific styles
 @import "pages/home";
 @import "pages/about/about";
+@import "pages/about/about-abilities";
 @import "pages/about/about-intro";
 @import "pages/about/about-experience";
 @import "pages/contact";
