--- a/src/sass/pages/about/_about-experience.scss
+++ b/src/sass/pages/about/_about-experience.scss
@@ -3,6 +3,10 @@
 // ---------------------------------------------------------------------------
 
 #about #experience {
+  .container {
+    max-width: 1200px;
+  }
+
   @mixin breakpoint {
     @media screen and (max-width: 750px) {
       @content;
