--- a/src/sass/pages/about/_about.scss
+++ b/src/sass/pages/about/_about.scss
@@ -17,7 +17,6 @@
 
   .container {
     width: 80%;
-    max-width: 1200px;
-    margin: auto $horizontal-padding; //Center div
+    margin: auto;
   }
 }
