--- a/src/sass/pages/about/_about.scss
+++ b/src/sass/pages/about/_about.scss
@@ -17,6 +17,9 @@
 
   .container {
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: auto;
   }
 }
