Using class instead of ID for reused components

--- a/src/sass/components/_next-section-button.scss
+++ b/src/sass/components/_next-section-button.scss
@@ -2,7 +2,7 @@
 // This file contains all styles related to the "Next Section Button" component.
 // ---------------------------------------------------------------------------
 
-#next-section-button {
+.next-section-button {
   margin-bottom: 12px;
 
   img {
