--- a/src/sass/components/_slideshow-gallery.scss
+++ b/src/sass/components/_slideshow-gallery.scss
@@ -2,7 +2,7 @@
 // This file contains all styles related to the "Slideshow Gallery" component.
 // ---------------------------------------------------------------------------
 
-#slideshow-gallery {
+.slideshow-gallery {
   .navigation-buttons {
     float: right;
     margin: 6px 18px;
