--- a/src/sass/pages/about/_about-abilities.scss
+++ b/src/sass/pages/about/_about-abilities.scss
@@ -18,7 +18,7 @@
     }
   }
 
-  #ability {
+  .ability {
     display: inline-block;
     margin: 24px 32px;
 
@@ -31,7 +31,7 @@
       display: inline-block;
       text-align: center;
 
-      #img-container {
+      .img-container {
         display: inline-block;
         margin-bottom: 18px;
         border: 2px solid $color-on-background;
@@ -49,7 +49,7 @@
       }
 
       &:hover {
-        #img-container {
+        .img-container {
           border-color: $color-accent;
         }
 
