--- a/src/sass/layouts/_scroll-to-top.scss
+++ b/src/sass/layouts/_scroll-to-top.scss
@@ -17,6 +17,9 @@
 
   span {
     font-size: 12px;
-    color: $color-on-background;
+
+    @include themed {
+      color: t("color-on-background");
+    }
   }
 }
