--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -3,17 +3,10 @@
 // ---------------------------------------------------------------------------
 
 // Mixin for text
-@mixin text(
-  $font-family,
-  $font-size,
-  $font-weight,
-  $line-height,
-  $letter-spacing,
-  $text-transform: none
-) {
+@mixin text($font-family, $font-size, $font-weight, $line-height, $letter-spacing, $text-transform: none) {
   margin: 0;
   font-family: $font-family;
-  font-size: $font-size;    // Fallback to pixels if rem is not supported
+  font-size: $font-size; // Fallback to pixels if rem is not supported
   font-size: calculateRem($font-size);
   font-weight: $font-weight;
   line-height: $line-height;
@@ -22,7 +15,7 @@
 }
 
 // Mixin for centered headings (h1, h2). Centers text with middle lines on either side.
-@mixin centered-heading($line-size, $width, $line-color, $vertical-margin) {
+@mixin centered-heading($line-size, $width, $vertical-margin) {
   padding: $vertical-margin 0;
   text-align: center;
 
@@ -32,8 +25,12 @@
     display: inline-block;
     width: $width;
     margin: 0 1rem;
-    border-top: $line-size solid $line-color;
+    border-top: $line-size solid;
     transform: translateY(-0.4em);
+
+    @include themed {
+      border-top-color: t('color-on-background');
+    }
 
     @media screen and (max-width: $breakpoint-mobile) {
       display: none;
@@ -44,12 +41,12 @@
 // Headings
 h1 {
   @include text($heading-font-family, 48px, 400, 1.2, -0.25px, uppercase);
-  @include centered-heading(4px, 4rem, $color-on-background, 3%);
+  @include centered-heading(4px, 4rem, 3%);
 }
 
 h2 {
   @include text($heading-font-family, 40px, 300, 1.2, -0.5px, uppercase);
-  @include centered-heading(2px, 3rem, $color-on-background-variant, 3%);
+  @include centered-heading(2px, 3rem, 3%);
 }
 
 h3 {
@@ -60,14 +57,16 @@ h4 {
   @include text($heading-font-family, 24px, 500, 1.2, 0);
 }
 
-h5{
+h5 {
   @include text($heading-font-family, 18px, 400, 1.2, 0);
 }
 
 // Body
-html {
+#app {
   @include text($body-font-family, 18px, 400, 1.5, 0.5px);
-  color: $color-on-background;
+  @include themed {
+    color: t('color-on-background');
+  }
 
   @media screen and (max-width: $breakpoint-mobile) {
     font-size: 14px;
