--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 // Configurations and helpers
 @import "abstract/variables";
 @import "abstract/mixins";
+@import "abstract/themes";
 
 // Base
 @import "base/typeface";
