--- a/src/sass/pages/about/_about-abilities.scss
+++ b/src/sass/pages/about/_about-abilities.scss
@@ -34,9 +34,13 @@
       .img-container {
         display: inline-block;
         margin-bottom: 18px;
-        border: 2px solid $color-on-background;
+        border: 2px solid;
         border-radius: 50%;
         cursor: pointer;
+
+        @include themed {
+          border-color: t("color-on-background");
+        }
       }
 
       img {
@@ -64,7 +68,11 @@
       display: inline-block;
       padding: 24px 12px;
       margin-left: 32px;
-      border-left: 1px solid $color-on-background;
+      border-left: 1px solid;
+
+      @include themed {
+        border-left-color: t("color-on-background");
+      }
 
       &:before {
         content: "";
@@ -74,7 +82,10 @@
         left: -32px;
         top: calc(50% - 8px);
         border: 16px solid transparent;
-        border-right-color: $color-on-background;
+
+        @include themed {
+          border-right-color: t("color-on-background");
+        }
       }
 
       &:after {
@@ -85,7 +96,10 @@
         left: -31px;
         top: calc(50% - 8px);
         border: 16px solid transparent;
-        border-right-color: $color-background-variant;
+
+        @include themed {
+          border-right-color: t("color-background-variant");
+        }
       }
 
       .skill-item {
