--- a/src/sass/pages/about/_about-experience.scss
+++ b/src/sass/pages/about/_about-experience.scss
@@ -31,7 +31,11 @@
     margin: 0;
     margin-right: 12px;
     list-style-type: none;
-    border-left: 2px solid $color-on-background;
+    border-left: 2px solid;
+
+    @include themed {
+      border-left-color: t("color-on-background");
+    }
 
     // When screen is smaller than breakpoint (750px), then timeline moves to the top
     @include breakpoint {
@@ -59,9 +63,13 @@
         width: 6px;
         top: calc(50% - 4px);
         left: -18px;
-        background-color: $color-background-variant;
-        border: 2px solid $color-on-background;
+        border: 2px solid;
         border-radius: 50%;
+
+        @include themed {
+          background-color: t("color-background-variant");
+          border-color: t("color-on-background");
+        }
         @include transition(left 0.2s);
 
         @include breakpoint {
