--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "layouts/content";
 @import "layouts/header";
 @import "layouts/footer";
+@import "layouts/toggle-theme-button";
 @import "layouts/social-links";
 @import "layouts/scroll-to-top";
 
