--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -5,7 +5,7 @@
 #home {
   height: $content-height;
   width: 100%;
-  background-color: $color-base-variant;
+  background-color: $color-base;
 
   #background-image {
     position: absolute;
