--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,10 @@
 @charset "UTF-8";
 
 @import "abstract/variables";
+@import "abstract/functions";
+@import "abstract/mixins";
 
 @import "base/typeface";
 
+@import "layouts/base";
 @import "layouts/header";
