Header now splits pages

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -8,7 +8,7 @@ header {
   align-items: center;
   width: 100%;
   top: 0;
-  padding: 0 25%;
+  padding: 0 20%;
   box-sizing: border-box;
   z-index: 3;
   background-color: $color-base;
@@ -16,7 +16,7 @@ header {
   img {
     display: block;
     height: 42px;
-    margin: 7px 0;
+    margin: 7px;
   }
 
   nav {
@@ -24,8 +24,8 @@ header {
   }
 
   ul {
-    @include no-decoration-ul;
-    float: right;
+	@include no-decoration-ul;
+	margin-left: 16px;
 
     li {
       position: relative;
@@ -35,6 +35,10 @@ header {
       text-align: center;
       text-decoration: none;
       cursor: pointer;
+
+	  &.right{
+		  float:right;
+	  }
 
       &:hover {
         color: $color-accent;
