--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -10,11 +10,11 @@ $color-on-accent: black;
 
 $color-background: white;
 $color-on-background: #222;
-$color-on-background-light: #666;
+$color-on-background-variant: #666;
 
 $color-base:#222;
 $color-on-base: white;
-$color-on-base-light: #AAA;
+$color-on-base-variant: #AAA;
 
 // Font-families
 @import url("https://fonts.googleapis.com/css?family=Staatliches|Raleway|Share+Tech+Mono&display=swap");
