--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -25,24 +25,24 @@ header {
     padding: 0;
   }
 
-  $logo-size: 42px;
-
   #logo {
     display: block;
-    height: $logo-size;
+    height: 42px;
 
     @include breakpoint($breakpoint-small) {
       float: left;
-      margin: 11px 0 11px 2vw;
+      margin: 7px 0 7px 2vw;
     }
   }
 
   #menu-icon {
     display: none;
     float: right;
-    height: $logo-size;
-    width: $logo-size;
-    margin: 11px 2vw 11px 0;
+    height: 32px;
+    width: 32px;
+    margin: 12px 2vw 12px 0;
+    background: url("../assets/ico/header/menu-white.png") center;
+    background-size: contain;
 
     @include breakpoint($breakpoint-small) {
       display: block;
@@ -52,14 +52,10 @@ header {
   #toggle-menu {
     display: none;
 
-    & + #menu-icon {
-      background: url("../assets/ico/header/menu-white.png") center;
-      background-size: contain;
-
-      &:hover {
-        background-image: url("../assets/ico/header/menu-accent.png");
-        @include transition(background-image 0.5s ease, transform 0.5s ease);
-      }
+    //
+    & + #menu-icon:hover {
+      background-image: url("../assets/ico/header/menu-accent.png");
+      @include transition(background-image 0.5s ease, transform 0.5s ease);
     }
 
     &:checked {
@@ -81,7 +77,7 @@ header {
 
     @include breakpoint($breakpoint-small) {
       max-height: 0;
-      margin: 64px 0 0;
+      margin: 56px 0 0;
       overflow: hidden;
       @include transition(max-height 0.5s ease-in-out);
     }
@@ -92,7 +88,7 @@ header {
       li {
         position: relative;
         display: inline-block;
-        padding: 16px 12px;
+        padding: 14px 8px;
         color: $color-on-base;
         text-align: center;
         text-decoration: none;
@@ -113,7 +109,7 @@ header {
         }
 
         &:after {
-          @include shutter-border-vertical(4px, 60px);
+          @include shutter-border-vertical(4px, 52px);
         }
 
         &.router-link-active {
