Basic html/css for home page

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -21,3 +21,6 @@ $color-on-base-variant: #AAA;
 $heading-font-family: "Staatliches", sans-serif;
 $body-font-family: "Raleway", sans-serif;
 $code-font-family: "Share Tech Mono", monospace;
+
+// Dimesions
+$content-height: calc(100vh - 56px);
