Header font is now Oswald

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -17,8 +17,8 @@ $color-on-base: white;
 $color-on-base-variant: #AAA;
 
 // Font-families
-@import url("https://fonts.googleapis.com/css?family=Staatliches|Raleway|Share+Tech+Mono&display=swap");
-$heading-font-family: "Staatliches", sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Oswald|Raleway|Share+Tech+Mono&display=swap");
+$heading-font-family: "Oswald", sans-serif;
 $body-font-family: "Raleway", sans-serif;
 $code-font-family: "Share Tech Mono", monospace;
 
