--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,8 +5,11 @@
 @import "abstract/mixins";
 
 @import "base/typeface";
+@import "base/keyframes";
 
 @import "layouts/base";
 @import "layouts/header";
+
+@import "components/button";
 
 @import "pages/home";
