--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,23 +3,18 @@
 // ---------------------------------------------------------------------------
 
 button {
-  padding: 12px 42px;
+  position: relative;
+  padding: 8px 32px;
   border: 1px solid $color-accent;
-  border-radius: 4px;
   outline: none;
   color: $color-accent;
   background-color: transparent;
-  @include text(inherit, inherit, inherit, inherit, 2px, uppercase);   // Fonts need to be inherited
+  @include text(inherit, inherit, inherit, inherit, 2px, uppercase); // Fonts need to be inherited
   cursor: pointer;
-  transition-duration: 0.3s;
 
   &:hover {
+    @include glitch-text(attr(glitch-text), $color-on-accent, 8px, 32px);
     color: $color-on-accent;
     background-color: $color-accent;
-  }
-
-  // Continues after click (Needed for animation to continue after clicking)
-  &:active {
-    @include animation(push 0.1s ease-in-out);
   }
 }
