--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -17,9 +17,9 @@ $color-on-base: white;
 $color-on-base-variant: #AAA;
 
 // Font-families
-@import url("https://fonts.googleapis.com/css?family=Oswald|Raleway|Share+Tech+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Oswald|Barlow|Share+Tech+Mono&display=swap");
 $heading-font-family: "Oswald", sans-serif;
-$body-font-family: "Raleway", sans-serif;
+$body-font-family: "Barlow", sans-serif;
 $code-font-family: "Share Tech Mono", monospace;
 
 // Dimesions
