--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -14,7 +14,7 @@ button {
   transition: 0.2s;
 
   &:hover {
-    @include glitch-text(attr(glitch-text), $color-on-accent, 8px, 32px);
+    @include glitch-text(attr(glitch-text), bold, $color-on-accent, 8px, 32px);
     color: $color-on-accent;
     background-color: $color-accent;
   }
