--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -16,5 +16,14 @@ button {
   &:hover {
     color: $color-on-accent;
     background-color: $color-accent;
+    background: linear-gradient(
+      to bottom,
+      $color-accent,
+      $color-accent 50%,
+      $color-accent-dark 50%,
+      $color-accent-dark
+    );
+    background-size: 100% 6px;
+    @include animation(gradient-move 0.3s ease infinite);
   }
 }
